--- a/css/main.css
+++ b/css/main.css
@@ -160,20 +160,20 @@ label {
 }
 @keyframes show_notification {
   0% {
-    visibility: visible;
-  }
-  10% {
-    opacity: 1;
-  }
-  80% {
-    opacity: 1;
-  }
-  90% {
     opacity: 0;
+    transform: translateY(-10px);
+  }
+  3% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  97% {
+    opacity: 1;
+    transform: translateY(0px);
   }
   100% {
-    visibility: hidden;
-    display: none;
+    opacity: 0;
+    transform: translateY(-10px);
   }
 }
 @keyframes show_header_button_counter {
@@ -1045,12 +1045,10 @@ label {
   right: 15px;
   width: 300px;
   transition: 0.15s;
-  max-height: 500px;
-  overflow: hidden;
   display: block;
-  visibility: hidden;
+  visibility: visible;
   opacity: 1;
-  transform: translateY(-10px);
+  transform: translateY(0px);
 }
 .header__notification_temporary__grid {
   display: flex;
@@ -1062,8 +1060,7 @@ label {
   padding: 8px;
   display: flex;
   gap: 8px;
-  opacity: 0;
-  transition-delay: 5s;
+  opacity: 1;
   animation: show_notification 5s ease-out 1;
   background-color: rgba(50, 50, 50, 0.75);
   border: 1px solid rgba(255, 255, 255, 0.15);
@@ -6455,7 +6452,7 @@ label {
   position: relative;
   z-index: 2;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   transition: 0.4s;
 }
 .series__about__block {
@@ -6464,6 +6461,7 @@ label {
   overflow: hidden;
   border-radius: 20px;
   transition: 0.4s;
+  cursor: pointer;
   background-color: rgba(50, 50, 50, 0.75);
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
@@ -6481,26 +6479,35 @@ label {
 .series__about__block > p:last-child {
   margin-bottom: 0;
 }
-.series__about__buttonBlock {
-  position: relative;
+.series__about__gradient {
+  position: absolute;
   z-index: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 0px;
   transition: 0.2s;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  cursor: pointer;
   background: linear-gradient(to top, rgb(39, 39, 39), transparent);
 }
+.series__about__buttonBlock {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  height: 100%;
+  right: -55px;
+  display: flex;
+  align-items: end;
+  transition: 0.3s;
+}
 .series__about__buttonBlock > button {
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
   backdrop-filter: blur(10px);
-  font-size: 20px;
   transition: 0.2s;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.15);
@@ -6519,22 +6526,19 @@ label {
   transition: 0.2s;
   transform: rotate(270deg);
 }
-.series__about_hidden {
-  margin-bottom: 50px;
-}
 .series__about_hidden .series__about__block {
   max-height: 150px;
   box-shadow: 0 0 0 transparent;
   color: rgb(180, 180, 180);
 }
 .series__about_hidden .series__about__buttonBlock {
-  margin-top: -70px;
-}
-.series__about_hidden .series__about__buttonBlock > button {
-  transform: translateY(30px);
+  height: 45px;
 }
 .series__about_hidden .series__about__buttonBlock > button > svg {
   transform: rotate(90deg);
+}
+.series__about_hidden .series__about__gradient {
+  height: 50px;
 }
 .series__games__head {
   margin-bottom: 20px;
