--- a/scss/elements/series/_series.scss
+++ b/scss/elements/series/_series.scss
@@ -22,7 +22,7 @@
         position: relative;
         z-index: 2;
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
         transition: .4s;
         &__block {
             max-height: 1000px;
@@ -30,6 +30,7 @@
             overflow: hidden;
             border-radius: 20px;
             transition: .4s;
+            cursor: pointer;
             @include base.style-main_base;
             & > h3 {
                 font-size: 24px;
@@ -44,26 +45,35 @@
                 }
             }
         }
-        &__buttonBlock {
-            position: relative;
+        &__gradient {
+            position: absolute;
             z-index: 2;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 0px;
             transition: .2s;
-            padding-top: 10px;
-            padding-bottom: 10px;
+            cursor: pointer;
             background: linear-gradient(to top, base.$clr-main_body, transparent);
+        }
+        &__buttonBlock {
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            height: 100%;
+            right: -55px;
+            display: flex;
+            align-items: end;
+            transition: .3s;
             & > button {
-                height: 50px;
-                width: 50px;
+                height: 45px;
+                width: 45px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 border-radius: 50%;
                 -webkit-backdrop-filter: blur(10px);
                 backdrop-filter: blur(10px);
-                font-size: 20px;
                 transition: .2s;
                 @include base.style-main_click;
                 & > svg {
@@ -73,7 +83,7 @@
             }
         }
         &_hidden {
-            margin-bottom: 50px;
+            // margin-bottom: 50px;
         }
         &_hidden &{
             &__block {
@@ -83,13 +93,16 @@
                 // opacity: .8;
             }
             &__buttonBlock {
-                margin-top: -70px;
+                height: 45px;
+                // align-items: start;
                 & > button {
-                    transform: translateY(30px);
                     & > svg {
                         transform: rotate(90deg);
                     }
                 }
+            }
+            &__gradient {
+                height: 50px;
             }
         }
     }
