--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,16 @@ label {
     transform: scale(1);
   }
 }
+@keyframes show_header_auth_block {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 @keyframes show_notification {
   0% {
     opacity: 0;
@@ -1041,7 +1051,7 @@ label {
 }
 .header__notification_temporary {
   position: absolute;
-  top: 100px;
+  top: 90px;
   right: 15px;
   width: 300px;
   transition: 0.15s;
@@ -1133,6 +1143,38 @@ label {
   visibility: visible;
   opacity: 1;
   transform: translateY(0px);
+}
+.header__authBlock {
+  position: absolute;
+  top: 90px;
+  right: 15px;
+  transition: 0.15s;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: rgba(50, 50, 50, 0.75);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+}
+.header__authBlock > h4 {
+  font-weight: 700;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.header__authBlock > a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  color: rgb(200, 200, 200);
+  transition: 0.2s;
+  cursor: pointer;
+}
+.header__authBlock > a:hover {
+  color: rgb(1, 162, 255);
+}
+.header__authBlock_hidden {
+  opacity: 0;
+  transform: translateY(-10px);
 }
 
 .footer {
@@ -1968,6 +2010,9 @@ label {
 }
 .heading > button:active {
   transform: scale(0.95);
+}
+.heading_center {
+  justify-content: center;
 }
 
 .griding_3InRow {
