--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -235,6 +235,16 @@
                     @include base.style-main_active;
                 }
             }
+            &_auth {
+                width: auto;
+                border-radius: 22.5px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 7px;
+                padding-right: 11px;
+                padding-left: 13px;
+            }
         }
         &__buttonBasket {
             height: 45px;
@@ -842,36 +852,6 @@
             visibility: visible;
             opacity: 1;
             transform: translateY(0px);
-        }
-    }
-    &__authBlock {
-        position: absolute;
-        top: 90px;
-        right: 15px;
-        transition: 0.15s;
-        border-radius: 20px;
-        // animation: show_header_auth_block .2s base.$tf-main 1;
-        overflow: hidden;
-        @include base.style-main_base;
-        & > h4 {
-            font-weight: 700;
-            padding: 10px;
-            background-color: rgba(255, 255, 255, .05);
-        }
-        & > a {
-            display: block;
-            padding: 10px;
-            text-align: center;
-            color: rgb(200, 200, 200);
-            transition: .2s;
-            cursor: pointer;
-            &:hover {
-                color: base.$clr-blue_light;
-            }
-        }
-        &_hidden {
-            opacity: 0;
-            transform: translateY(-10px);
         }
     }
 }
