--- a/css/main.css
+++ b/css/main.css
@@ -495,6 +495,16 @@ label {
   background-color: rgba(1, 162, 255, 0.4);
   border: 1px solid rgb(1, 162, 255);
 }
+.header__nav__button_auth {
+  width: auto;
+  border-radius: 22.5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+  padding-right: 11px;
+  padding-left: 13px;
+}
 .header__nav__buttonBasket {
   height: 45px;
   display: flex;
@@ -1143,38 +1153,6 @@ label {
   visibility: visible;
   opacity: 1;
   transform: translateY(0px);
-}
-.header__authBlock {
-  position: absolute;
-  top: 90px;
-  right: 15px;
-  transition: 0.15s;
-  border-radius: 20px;
-  overflow: hidden;
-  background-color: rgba(50, 50, 50, 0.75);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(10px);
-}
-.header__authBlock > h4 {
-  font-weight: 700;
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.05);
-}
-.header__authBlock > a {
-  display: block;
-  padding: 10px;
-  text-align: center;
-  color: rgb(200, 200, 200);
-  transition: 0.2s;
-  cursor: pointer;
-}
-.header__authBlock > a:hover {
-  color: rgb(1, 162, 255);
-}
-.header__authBlock_hidden {
-  opacity: 0;
-  transform: translateY(-10px);
 }
 
 .footer {
