--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -244,6 +244,7 @@
                 gap: 7px;
                 padding-right: 11px;
                 padding-left: 13px;
+                text-shadow: 0 0 3px rgb(0, 0, 0, .8);
             }
         }
         &__buttonBasket {
