--- a/scss/elements/_inner.scss
+++ b/scss/elements/_inner.scss
@@ -41,6 +41,10 @@
         width: 1405px;
         padding-top: 100px;
     }
+    &_w1605p100 {
+        width: 1605px;
+        padding-top: 100px;
+    }
     &_w1220p150 {
         width: 1220px;
         padding-top: 150px;
