--- a/scss/elements/_inputList.scss
+++ b/scss/elements/_inputList.scss
@@ -346,19 +346,69 @@ $-border_radius: 12px;
                 font-size: 14px;
                 border-radius: 5px;
                 padding: 2px 5px;
+                cursor: text;
                 @include base.style-main;
                 &:focus {
                     @include base.style-main_active;
                 }
             }
         }
+        &__interval {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 5px;
+            padding: 5px;
+            border-bottom: 1px solid rgba(255, 255, 255, .2);
+            &__values {
+                display: flex;
+                align-items: center;
+                gap: 2px;
+                flex-grow: 1;
+                min-width: 0;
+                & > input {
+                    min-width: 0;
+                    display: block;
+                    font-size: 14px;
+                    border-radius: 5px;
+                    padding: 2px 5px;
+                    flex-grow: 1;
+                    cursor: text;
+                    -moz-appearance: textfield;
+                    appearance: textfield;
+                    @include base.style-main;
+                    &:focus {
+                        @include base.style-main_active;
+                    }
+                    &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
+                        -webkit-appearance: none;
+                        margin: 0;
+                    }
+                }
+                & > span {
+                    display: block;
+                    width: 4px;
+                    height: 2px;
+                    border-radius: 2px;
+                    background-color: rgba(255, 255, 255 ,.2);
+                    flex-shrink: 0;
+                }
+            }
+            &__button {
+                padding: 2px 5px;
+                border-radius: 5px;
+                font-size: 14px;
+                flex-shrink: 0;
+                @include base.style-main_click;
+            }
+        }
         &__list {
             max-height: calc(200px - 36px);
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            // gap: 5px;
             padding: 5px;
-            padding-bottom: 7px;
+            padding-bottom: 0px;
             overflow: auto;
             // @include base.style-webkit_scrollbar;
             &::-webkit-scrollbar {
@@ -371,6 +421,8 @@ $-border_radius: 12px;
                 font-size: 14px;
                 display: flex;
                 align-items: center;
+                max-height: 50px;
+                margin-bottom: 5px;
                 @include base.style-main_click;
                 &__click {
                     position: absolute;
@@ -393,6 +445,16 @@ $-border_radius: 12px;
                 }
                 &_active {
                     @include base.style-main_active;
+                }
+                &_hidden {
+                    opacity: 0;
+                    max-height: 0px;
+                    border-bottom: none;
+                    border-top: none;
+                    pointer-events: none;
+                    padding: 0;
+                    margin: 0;
+                    overflow: hidden;
                 }
             }
         }
