--- a/scss/elements/catalog/_formFilters.scss
+++ b/scss/elements/catalog/_formFilters.scss
@@ -101,8 +101,68 @@
 }
 
 .filters {
+    margin-bottom: 30px;
     &__row {
-        display: flex;
-        gap: 10px;
+        position: relative;
+        z-index: 2;
+        margin-bottom: 0px;
+        transition: .3s;
+        @include base.grid(10px, 5);
+        &__buttons {
+            height: 40px;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            &__toggle {
+                height: 100%;
+                padding-right: 10px;
+                border-radius: 12px;
+                width: 70%;
+                min-width: 125px;
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                @include base.style-main_click;
+                & > svg {
+                    height: 22px;
+                    width: 22px;
+                }
+            }
+            &__reset {
+                height: 100%;
+                width: 30%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                &:hover {
+                    color: base.$clr-blue_light;
+                }
+            }
+        }
+        &_second {
+            position: relative;
+            z-index: 1;
+            overflow: hidden;
+            transition: .2s;
+            max-height: 0px;
+            opacity: 0;
+            margin-bottom: 0;
+        }
+    }
+    &_all &{
+        &__row {
+            margin-bottom: 10px;
+            &__buttons {
+                &__toggle {
+                    @include base.style-main_active;
+                }
+            }
+            &_second {
+                max-height: 40px;
+                overflow: visible;
+                opacity: 1;
+            }
+        }
     }
 }
