--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -101,12 +101,24 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
     box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
 }
 
-@mixin style-main_base {
+@mixin style-main_base_blur {
     background-color: rgba(50, 50, 50, 0.75);
     border: 1px solid rgba(255, 255, 255, .15);
     box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
+}
+
+@mixin style-main_base {
+    background-color: rgba(50, 50, 50, 0.75);
+    border: 1px solid rgba(255, 255, 255, .15);
+    box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
+}
+
+@mixin style-main_base_47 {
+    background-color: rgb(47, 47, 47);
+    border: 1px solid rgb(78, 78, 78);
+    box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
 }
 
 @mixin style-main_active {
