--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -17,7 +17,7 @@
         left: 0;
         z-index: 1;
 
-        @include base.style-main_base;
+        @include base.style-main_base_blur;
         border: {
             top: none;
             left: none;
@@ -26,6 +26,7 @@
         opacity: 0;
         transition: 0.5s;
         overflow: hidden;
+        will-change: opacity, bottom;
         &_profile {
             opacity: 1;
         }
@@ -506,6 +507,7 @@
         overflow: hidden;
         opacity: 0;
         transform: translateY(-10px);
+        will-change: opacity, transform;
         @include base.style-main_base;
         &__head {
             display: flex;
@@ -669,6 +671,7 @@
         overflow: hidden;
         opacity: 0;
         transform: translateY(-10px);
+        will-change: opacity, transform;
         @include base.style-main_base;
         &__header {
             display: flex;
