--- a/scss/elements/_inputList.scss
+++ b/scss/elements/_inputList.scss
@@ -270,7 +270,7 @@ $-border_radius: 12px;
     border-radius: $-border_radius;
     position: relative;
     z-index: 1;
-    width: 250px;
+    min-width: 220px;
     &__header {
         position: relative;
         height: inherit;
@@ -281,7 +281,7 @@ $-border_radius: 12px;
         border-radius: $-border_radius;
         cursor: pointer;
         transition: .2s;
-        @include base.style-main_base;
+        @include base.style-main;
         & > * {
             position: relative;
             z-index: 1;
@@ -372,13 +372,11 @@ $-border_radius: 12px;
         border-radius: 0px 0px $-border_radius $-border_radius;
         overflow: hidden;
         transition: .2s;
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
 
         max-height: 0px;
         opacity: 0;
-        @include base.style-main;
-        
+        @include base.style-main_base;
+        border-top: none;
         &__search {
             padding: 5px;
             border-bottom: 1px solid rgba(255, 255, 255, .2);
@@ -448,8 +446,8 @@ $-border_radius: 12px;
             display: flex;
             flex-direction: column;
             // gap: 5px;
-            padding: 5px;
-            padding-bottom: 0px;
+            // padding: 5px;
+            // padding-bottom: 0px;
             overflow: auto;
             // @include base.style-webkit_scrollbar;
             &::-webkit-scrollbar {
@@ -463,8 +461,16 @@ $-border_radius: 12px;
                 display: flex;
                 align-items: center;
                 max-height: 50px;
-                margin-bottom: 5px;
+                // margin-bottom: 5px;
+                margin: 2.5px 5px 2.5px 5px;
                 @include base.style-main_click;
+                background-color: rgb(60, 60, 60);
+                &:first-child {
+                    margin-top: 5px;
+                }
+                &:last-child {
+                    margin-bottom: 5px;
+                }
                 &__click {
                     position: absolute;
                     top: 0; bottom: 0; right: 0; left: 0;
@@ -495,6 +501,8 @@ $-border_radius: 12px;
                     pointer-events: none;
                     padding: 0;
                     margin: 0;
+                    margin-bottom: 0;
+                    margin-top: 0;
                     overflow: hidden;
                 }
             }
