--- a/scss/elements/_switch.scss
+++ b/scss/elements/_switch.scss
@@ -19,12 +19,24 @@
             background-color: rgba(255, 255, 255, .05);
             transition: .2s;
             @include base.style-main_click;
+            &__click {
+                position: absolute;
+                top: 0;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                z-index: 2;
+            }
             &__text {
+                position: relative;
+                z-index: 1;
                 font-size: 16px;
                 font-weight: 600;
                 cursor: pointer;
             }
             & > span {
+                position: relative;
+                z-index: 1;
                 font-size: 14px;
                 cursor: pointer;
                 transform: translateY(1px);
