--- a/scss/elements/_topImgParalaxBlock.scss
+++ b/scss/elements/_topImgParalaxBlock.scss
@@ -7,6 +7,7 @@
     // height: 550px;
     border-bottom: 1px solid rgba(255, 255, 255, .3);
     overflow: hidden;
+    will-change: height, opacity;
     & > img {
         min-width: 100%;
         min-height: 100%;
