--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -10,9 +10,9 @@
     gap: 10px;
     flex-wrap: wrap;
     margin-bottom: 20px;
-    transform: translateY(0px) scale(1);
-    opacity: 1;
-    transition: 0.2s;
+    & > * {
+        will-change: opacity, transform;
+    }
     &__left {
         width: 700px;
         transition: 0.2s;
@@ -228,7 +228,6 @@
                 bottom: 0px;
                 left: 0px;
                 right: 0px;
-                // overflow-y: auto;
                 background: linear-gradient(to top, rgba(0, 0, 0, .5), transparent);
                 opacity: 0;
                 transform: translateY(20px);
@@ -348,6 +347,12 @@
                             & > svg {
                                 width: 100%;
                                 height: 100%;
+                            }
+                            &__entry {
+                                display: block;
+                            }
+                            &__exit {
+                                display: none;
                             }
                         }
                     }
@@ -490,6 +495,12 @@
                                 height: 45px;
                                 width: 45px;
                                 padding: 11px;
+                                &__entry {
+                                    display: none;
+                                }
+                                &__exit {
+                                    display: block;
+                                }
                             }
                         }
                     }
@@ -521,18 +532,7 @@
                         opacity: 0;
                         transform: translateY(calc(100% - 205px)) !important;
                     }
-                    // &:hover &__bottom {
-                    //     opacity: 1;
-                    //     transform: translateY(0px);
-                    // }
                 }
-                // &:hover {
-                //     background-color: rgba(0, 0, 0, 0);
-                // }
-                // &:hover &__bottom {
-                //     opacity: 0;
-                //     transform: translateY(20px);
-                // }
             }
         }
 
