--- a/scss/elements/index/_carousel.scss
+++ b/scss/elements/index/_carousel.scss
@@ -63,6 +63,7 @@
             @include base.absolute-zero;
             transition: 1s;
             opacity: 0;
+            will-change: opacity;
             // filter: blur(50px);
             & > img {
                 width: 100%;
@@ -83,6 +84,7 @@
         position: relative;
         z-index: 2;
         overflow: hidden;
+        will-change: transform, opacity, z-index, margin-left;
         &__imgBlock {
             width: 100%;
             height: 100%;
@@ -140,6 +142,7 @@
                     width: 350px;
                     position: relative;
                     z-index: 3;
+                    will-change: backdrop-filter;
                     @include base.style-main;
                     &__buttons {
                         display: flex;
